实现所有GroupAPI，重构NapcatInstall，增加艾特列表处理